Struttura pagina fino inizio chat, debug chat utente

--- a/index.html
+++ b/index.html
@@ -31,23 +31,66 @@
             <aside id="navbar">
                 <!-- section nome utente  -->
                 <section id="nome_utente">
+                    <div id="nome_e_immagine">
+                        <img class="avatar" src="img/avatar_io.jpg" alt="avatar_io">
+                        <span id="nome">Nome utente</span>
+                    </div>
 
+                    <div id="icone">
+                        <i class="icone fas fa-power-off"></i>
+                        <i class="icone fas fa-comment-alt"></i>
+                        <i class="icone fas fa-ellipsis-v"></i>
+                    </div>
                 </section>
 
                 <!-- section notifiche  -->
                 <section id="notifiche">
-
+                    <div id="notifiche_audio">
+                        <i id="audio" class="fas fa-bell-slash"></i>
+                    </div>
+                    <div>
+                        <span>
+                            Ricevi notifiche di nuovi messaggi
+                        </span>
+                        <div>
+                            <a id="attiva_notifiche" href="#">
+                                Attiva notifiche desktop
+                            </a>
+                        </div>
+                       
+                    </div>
                 </section>
 
                 <!-- section ricerca  -->
                 <section id="ricerca">
-
+                    <div id="icon_search">
+                        <i class="icone fas fa-search"></i>
+                    </div>
+                    <input id="input_search" type="text" placeholder="Cerca o inizia una nuova chat">
                 </section>
 
                 <!-- section chat  -->
                 <section id="container_chat">
                     <div class="chat">
+                        <!-- immagine chat utente  -->
+                        <img class="img_chat" src="img/avatar_1.jpg" alt="avatar1">
+                        <div id="messaggio_e_data">
+                            <div>
+                                <!-- nome  -->
+                                <span>
+                                    Michele
+                                </span>
+                                <!-- messaggio  -->
+                                <p>
+                                    szcsdv
+                                </p>
+                            </div>
 
+                            <div id="data_now">
+                                data
+                            </div>
+                        </div>
+                        
                     </div>
 
                     <div class="chat">
