--- a/index.html
+++ b/index.html
@@ -71,38 +71,26 @@
 
                 <!-- section chat  -->
                 <section id="container_chat">
-                    <div class="chat">
+                    <div class="chat" v-for="(contatto,i) in contatti" :key="i">
                         <!-- immagine chat utente  -->
-                        <img class="img_chat" src="img/avatar_1.jpg" alt="avatar1">
+                        <img class="img_chat" :src="contatto.immagine" alt="contatto.nome" >
                         <div id="messaggio_e_data">
                             <div>
                                 <!-- nome  -->
                                 <span>
-                                    Michele
+                                    {{contatto.nome}}
                                 </span>
                                 <!-- messaggio  -->
                                 <p>
-                                    szcsdv
+                                    {{contatto.messages[contatto.messages.length -1].text}}...
                                 </p>
                             </div>
 
                             <div id="data_now">
-                                data
+                                {{contatto.messages[contatto.messages.length -1].data}}
                             </div>
                         </div>
                         
-                    </div>
-
-                    <div class="chat">
-
-                    </div>
-
-                    <div class="chat">
-
-                    </div>
-
-                    <div class="chat">
-
                     </div>
 
                    
