--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
 
                 <!-- sezione input invio messaggi -->
                 <section id="send_message">
-                    
+                    <i class="icon_message far fa-smile"></i>
+                    <input id="send_message_input" placeholder="Scrivi un messaggio" type="text">
+                    <i class="icon_message fas fa-microphone"></i>
                 </section>
             </main>
 
