--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
                     <div id="icon_search">
                         <i class="icone fas fa-search"></i>
                     </div>
-                    <input id="input_search" type="text" placeholder="Cerca o inizia una nuova chat">
+                    <input id="input_search" @keyup="miaFunzione($event)" v-model="ricercaChat" type="text" placeholder="Cerca o inizia una nuova chat">
                 </section>
 
                 <!-- section chat  -->
                 <section id="container_chat">
-                    <div @click="activeChat(i)"  class="chat" v-for="(contatto,i) in contatti" :key="i" >
+                    <div @click="activeChat(i)" v-if="contatto.nome.toLowerCase().includes(ricercaChat.toLowerCase())"  class="chat" v-for="(contatto,i) in contatti" :key="i" >
                         <!-- immagine chat utente  -->
                         <img class="img_chat" :src="contatto.immagine" alt="contatto.nome" >
                         <div id="messaggio_e_data">
@@ -129,7 +129,7 @@
                 <!-- visualizzazione chat  -->
                 <section id="visual_open_chat" v-for="(contatto,i) in contatti" v-if="contatto.visibile === true" :key="i">
 
-                    <div v-for="(messaggio,i) in contatto.messages" :id="messaggio.status === 'sent' ? id='sent' : 'received' ">
+                    <div v-for="(messaggio,i) in contatto.messages" :id="messaggio.status === 'sent' ? 'sent' : 'received' ">
                         <div>
                             <span>{{messaggio.text}}</span>
                             <div class="data_invio"> {{messaggio.data}}</div>
