--- a/bonus/index.html
+++ b/bonus/index.html
@@ -33,13 +33,31 @@
                 <section id="nome_utente">
                     <div id="nome_e_immagine">
                         <img class="avatar" src="img/avatar_4.jpg" alt="avatar4">
-                        <span id="nome">Nome utente</span>
+                        <span id="nome">{{UserName}}</span>
                     </div>
 
                     <div class="icone_nav">
                         <i @click="statoUtente" class="icone fas fa-power-off" :id=" online === false ? 'offline' : '' "></i>
                         <i class="icone fas fa-comment-alt"></i>
-                        <i class="icone fas fa-ellipsis-v"></i>
+                        <i id="settingUser" class="icone fas fa-ellipsis-v" @click="settingUser"> </i>
+                         
+                        <div class="container_setting_user_click"  :id="setting ? 'setting_active' : '' ">
+                            <div class="dimensioni_single_setting_user" id="cambia_Nome_utente" @click="cambiaUserName">
+                                Cambia nome Utente
+                            </div>
+                            <div class="dimensioni_single_setting_user">
+                                Cambia immagine profilo
+                            </div>
+                            <div class="container_new_name" :id="changeUserName ? 'new_name_active' : '' ">
+                                <div id="close" @click="toCloseChangeUserName">
+                                    <i  class="fas fa-times"></i>
+                                </div>
+                                <h3>Inserisci il tuo nuovo nome utente</h3>
+                                <input id="new_name" type="text" v-model="newName" @keyup.enter="invioNewName">
+                            </div>
+                        </div>
+
+                        
                     </div>
                 </section>
 
